# nilvm

./: .dockerignore  .env.sample  .gitignore  .gitmodules  Cargo.toml  README.md  bors.toml  deny.toml  justfile  setup_env.sh
client/: Cargo.toml  README.md
client/src/: builder.rs  lib.rs  payments.rs  retry.rs  vm.rs
client/src/grpc/: compute.rs  leader_queries.rs  membership.rs  mod.rs  payments.rs  permissions.rs  programs.rs  values.rs
client/src/operation/: add_funds.rs  delete_values.rs  invoke_compute.rs  mod.rs  overwrite_permissions.rs  pool_status.rs  retrieve_compute_results.rs  retrieve_permissions.rs  retrieve_values.rs  store_program.rs  store_values.rs  update_permissions.rs
libs/basic-types/: Cargo.toml  README.md
libs/basic-types/src/: batches.rs  errors.rs  jar.rs  lib.rs  party.rs
libs/clap-utils/: Cargo.toml
libs/clap-utils/src/: lib.rs  shell_completions.rs
libs/client-core/: Cargo.toml  README.md
libs/client-core/src/: lib.rs  values.rs
libs/client-metrics/: Cargo.toml
libs/client-metrics/src/: lib.rs  piwik_track_client.rs
libs/ecdsa-keypair/: Cargo.toml  README.md
libs/ecdsa-keypair/src/: lib.rs  privatekey.rs  publickey.rs  signature.rs
libs/grpc-channel/: Cargo.toml
libs/grpc-channel/benches/: auth.rs
libs/grpc-channel/src/: auth.rs  lib.rs  token.rs
libs/math/: Cargo.toml  README.md
libs/math/benches/: fft_criterion.rs  lagrange_criterion.rs  modular_pow.rs
libs/math/src/: conversions.rs  errors.rs  lib.rs  serde.rs  test_macros.rs
libs/math/src/_tutorial/: mod.rs  modular.rs
libs/math/src/decoders/: fft.rs  gao.rs  lagrange.rs  mod.rs
libs/math/src/fields/: field.rs  mod.rs
libs/math/src/galois/: galois.rs  mod.rs  ops.rs
libs/math/src/matrix/: matrix.rs  mod.rs  ops.rs
libs/metrics/: Cargo.toml  README.md
libs/metrics/src/: gauge.rs  lib.rs  maybe.rs  metrics.rs  noop.rs  prometheus.rs  timing.rs
libs/nada-value/: Cargo.toml  README.md
libs/nada-value/src/: classify.rs  clear.rs  clear_modular.rs  encoders.rs  encrypted.rs  errors.rs  json.rs  lib.rs  protobuf.rs  validation.rs  value.rs
libs/nada-values-args/: Cargo.toml  README.md
libs/nada-values-args/src/: args.rs  file.rs  lib.rs  named.rs  parse.rs
libs/nilauth/: Cargo.toml
libs/nilauth-client/: Cargo.toml
libs/nilauth-client/examples/: mint.rs
libs/nilauth-client/src/: client.rs
libs/nilauth/examples/: mint.rs
libs/nilauth/src/: client.rs
libs/node-api/: Cargo.toml  build.rs
libs/node-api/src/: auth.rs  compute.rs  conversions.rs  leader_queries.rs  lib.rs  membership.rs  payments.rs  permissions.rs  preprocessing.rs  programs.rs  proto.rs  values.rs
libs/node-config/: Cargo.toml  README.md
libs/node-config/src/: lib.rs
libs/protocols/: Cargo.toml  README.md
libs/protocols/benches/: division-secret-divisor.rs  less-than.rs  modulo-public-divisor.rs  random-bitwise.rs
libs/protocols/src/: lib.rs
libs/serde-files-utils/: Cargo.toml  README.md
libs/serde-files-utils/src/: binary.rs  json.rs  lib.rs  string.rs  yaml.rs
libs/shamir-sharing/: Cargo.toml  README.md
libs/shamir-sharing/benches/: criterion.rs  flamegraph.rs  iai.rs
libs/shamir-sharing/src/: lib.rs  party.rs
libs/state-machine-derive/: Cargo.toml  README.md
libs/state-machine-derive/src/: lib.rs
libs/state-machine-derive/tests/: derive.rs
libs/test-logger/: Cargo.toml  README.md
libs/test-logger/src/: logger.rs
libs/threshold-keypair/: Cargo.toml  README.md
libs/threshold-keypair/src/: lib.rs  privatekey.rs  publickey.rs  signature.rs
libs/user-keypair/: Cargo.toml  README.md
libs/user-keypair/src/: ed25519.rs  lib.rs  secp256k1.rs
nada-lang/auto-tests/: Cargo.toml  README.md
nada-lang/auto-tests/src/: compiler.rs  generator.rs  input_provider.rs  lib.rs  main.rs  runner.rs
nada-lang/bytecode-evaluator/: Cargo.toml
nada-lang/bytecode-evaluator/src/: lib.rs  main.rs  operations.rs  tests.rs
nada-lang/compiler-backend/: Cargo.toml
nada-lang/compiler-backend-tests/: Cargo.toml
nada-lang/compiler-backend-tests/src/: assert.rs  contract.rs  lib.rs  preprocess.rs  validator.rs
nada-lang/compiler-backend/src/: lib.rs  literal_value.rs  program_contract.rs
nada-lang/mir-model/: Cargo.toml
nada-lang/mir-model/src/: builder.rs  lib.rs  model.rs  proto.rs  utils.rs
node/: Cargo.toml  README.md  build.rs  node.config.yaml.sample
node/builtin-programs/: tecdsa_sign.py  teddsa_sign.py
node/migrations/: 20240422165932_create_preprocessing_offsets_table.sql  20240424182626_add_next_batch_id_to_offsets_table.sql  20240513214639_add_used_nonce_table.sql  20240613171131_add_offset_deletion_columns.sql  20240806200351_tag_nonce_kind.sql  20240816204034_create_value_expiry_table.sql  20241023220255_add_expiry_table.sql  20241105173454_add_auxiliary_material_metadata_table.sql  20241121154304_add_account_balances_table.sql  20241122162205_add_transfers_table.sql  20241126185418_add_balance_last_updated_time.sql  20241209185221_prevent_negative_balance.sql
node/src/: builder.rs  channels.rs  lib.rs  main.rs
node/src/controllers/: compute.rs  leader_queries.rs  membership.rs  mod.rs  payments.rs  permissions.rs  preprocessing.rs  programs.rs  values.rs
node/src/grpc/: interceptors.rs  metrics.rs  mod.rs
node/src/observability/: mod.rs  process.rs  prometheus.rs  tracing.rs
node/src/services/: auxiliary_material.rs  blob.rs  mod.rs  nonce.rs  offsets.rs  payments.rs  preprocessing.rs  programs.rs  receipts.rs  results.rs  runtime_elements.rs  scheduling.rs  time.rs  token_dollar_conversion.rs  user_values.rs  uuid.rs
node/src/stateful/: auxiliary_material.rs  auxiliary_material_scheduler.rs  builder.rs  compute.rs  distributed_key_generation.rs  ecdsa_distributed_key_generation.rs  mod.rs  preprocessing.rs  preprocessing_scheduler.rs  sm.rs
node/src/storage/: metrics.rs  mod.rs  sqlite.rs
wasm-workspace/: Cargo.toml
wasm-workspace/.cargo/: config.toml
wasm-workspace/libs/nada-run/: Cargo.toml
wasm-workspace/nillion_client_wasm/: Cargo.toml
wasm-workspace/nillion_client_wasm/src/: lib.rs  values.rs
(+1051 files in other folders)
