[workspace]
resolver = "2"

members = [
    "nillion_client_wasm",
    "libs/nada-run",
]

[profile.release]
lto = true

[profile.bench]
debug = true

[profile.dev]
debug = true

[profile.release_debug]
inherits = "release"
debug = true

[profile.jenkins]
# https://doc.rust-lang.org/cargo/reference/profiles.html#dev
inherits = "dev"
lto = "off"
debug = false
# Incrementally compiled crates cannot be cached, disabling incremental
# compilation for jenkins profile increases the chances of sccache hits.
# https://github.com/mozilla/sccache#rust
incremental = false
