[package]
name = "basic-types"
version = "0.1.0"
edition = "2021"

[dependencies]
hex = "0.4"
serde = { version = "1", features = ["derive"], optional = true }
thiserror = "1"

[target.'cfg(target_family = "wasm")'.dependencies]
uuid = { version = "1.10", features = ["js"] }

[target.'cfg(not(target_family = "wasm"))'.dependencies]
uuid = { version = "1.10" }

[features]
default = []
serde = ["dep:serde"]
