[package]
name = "clap-utils"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5", features = ["string"] }
clap_complete = { version = "4.5.13", optional = true }

build-info = { path = "../build-info" }
serde = { version = "1.0.217", features = ["derive"] }

[features]
shell-completions = ["clap_complete", "clap/derive"]
