[package]
name = "client-metrics"
version = "0.1.0"
edition = "2021"

[dependencies]
build-info = { path = "../build-info" }

anyhow = "1.0.86"
dirs = "5.0.1"
rand = "0.8.5"
instant = "0.1"
serde_json = "1.0.127"
serde_urlencoded = "0.7.1"
tracing = "0.1"
reqwest = { version = "0.12", default-features = false, features = [
    "rustls-tls",
] }
serde = { version = "1.0.217", features = ["derive"] }
toml = "0.8.14"
tokio = { version = "1", features = ["rt-multi-thread"] }

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
