[package]
name = "ecdsa-keypair"
version = "0.1.0"
edition = "2021"
description = "Utilities for Threshold ECDSA signing"

[dependencies]
key-share = { version = "0.5.0", default-features = false, features = ["spof"] }
generic-ec = { version = "0.4.2", default-features = false, features = ["alloc", "curve-secp256k1"] }
serde = { version = "1", features = ["derive"], optional = true }
thiserror = "1"
rand = { version = "0.9" }
subtle = "2.6.1"
bson = { version = "2.13.0", optional = true }

[dev-dependencies]
rstest = "0.21"
bincode = "*"
cggmp21 = "0.5.0"
sha2 = "0.10"

[features]
default = []
serde = ["dep:serde", "bson", "key-share/serde"]
