[package]
name = "grpc-channel"
version = "0.1.0"
edition = "2021"

[dependencies]
base64 = "0.22.1"
lru = "0.12"
once_cell = "1.20"
prost = "0.13"
rand = "0.8"
thiserror = "1"
tonic = { version = "0.12", features = ["tls", "tls-roots"] }
tower = { version = "0.5", features = ["timeout"] }

node-api = { path = "../node-api", features = ["rust-types"] }
user-keypair = { path = "../user-keypair" }

[dev-dependencies]
criterion = "0.5"
rstest = "0.25.0"
sha2 = "0.10"

[[bench]]
name = "auth"
harness = false
