[package]
name = "metrics"
version = "0.1.0"
edition = "2021"

[dependencies]
cfg-if = "1"
once_cell = "1.20"
prometheus = { version = "0.13.4", optional = true }
thiserror = "2"
instant = "0.1.13"
tracing = "0.1"

[target.'cfg(target_family = "wasm")'.dependencies]
instant = { version = "0.1.13", features = ["wasm-bindgen"] }

[features]
default = []
prometheus-backend = ["prometheus"]
