[package]
name = "nada-values-args"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
base64 = "0.22.1"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"

nada-value = { path = "../nada-value" }
basic-types = { path = "../basic-types" }

[dev-dependencies]
rstest = "0.21"

[features]
default = []
