[package]
name = "node-config"
version = "0.1.0"
edition = "2021"

[dependencies]
config = { version = "0.14", default-features = false, features = ["yaml"] }
serde = "1.0"
humantime-serde = "1.1"
hex = { version = "0.4", features = ["serde"] }
serde_with = { version = "3.9", features = ["base64"] }

basic-types = { path = "../basic-types" }
program-auditor = { path = "../../nada-lang/program-auditor", features = ["serde"] }
execution-engine-vm = { path = "../execution-engine/execution-engine-vm" }

[package.metadata.cargo-machete]
ignored = ["humantime_serde"]
