[package]
name = "serde-files-utils"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
bincode = { version = "1", optional = true }
serde = { version = "1" }
serde_json = { version = "1", optional = true }
serde_yaml = { version = "0.9", optional = true }

[features]
default = ["json", "yaml", "bincode", "text"]
json = ["serde_json", "text"]
yaml = ["serde_yaml", "text"]
binary = ["bincode"]
text = []
