[package]
name = "state-machine-derive"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
heck = "0.5"
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features= ["extra-traits"] }

[dev-dependencies]
state-machine = { path = "../state-machine" }
serde = { version = "1", features = ["derive"] }
