[package]
name = "test-logger"
description = "Utility logger used in tests"
version = "0.1.0"
edition = "2021"

[dependencies]
once_cell = "1.20.2"
tracing-subscriber = {version = "0.3.19", optional = true}
env_logger = { version= "0.11.5", optional = true}

[features]
log = ["env_logger"]
tracing = [ "tracing-subscriber" ]

[dev-dependencies]
log = "0.4.27"
