[package]
name = "threshold-keypair"
version = "0.1.0"
edition = "2021"
description = "Utilities for Threshold signing"

[dependencies]
key-share = { version = "0.6.0", default-features = false, features = ["spof"] }
generic-ec = { version = "0.4.2", features = ["alloc", "curve-secp256k1", "curve-ed25519"] }
givre = { version = "0.2.0", default-features = false, features = ["ciphersuite-ed25519"] }
serde = { version = "1", default-features = false, features = ["derive"], optional = true }
thiserror = "1"
rand = { version = "0.8" }
subtle = "2.6.1"
bson = { version = "2.13.0", optional = true }
serde_with = { version = "3.12.0", optional = true }


[dev-dependencies]
rstest = "0.21"
bincode = "1.3.3"
cggmp21 = "0.6.0"
sha2 = "0.10"

[features]
default = []
serde = ["dep:serde", "bson", "key-share/serde", "generic-ec/serde", "givre/serde", "serde_with"]
