[package]
name = "user-keypair"
version = "0.1.0"
edition = "2021"
description = "Utilities for user authentication via keypair"

[dependencies]
ed25519-dalek = { version = "2.1.1", features = ["digest", "std", "rand_core"] }
k256 = { version = "0.13", features = ["ecdsa"] }
rand = "0.8"
sha2 = "0.10.8"
thiserror = "2"

[package.metadata.cargo-machete]
ignored = ["rand"]
