[package]
name = "compiler-backend-tests"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
anyhow = "1"
paste = "1.0"
rstest = "0.21.0"
xshell = "0.2.6"

mir-model = { path = "../mir-model", features = ["builder"] }
nada-value = { path = "../../libs/nada-value" }
nada-compiler-backend = { path = "../compiler-backend" }
pynadac = { path = "../pynadac" }
test-programs = { path = "../test-programs" }
serde-files-utils = { path = "../../libs/serde-files-utils", default-features = false, features = [
    "json",
    "binary",
] }
