[package]
name = "mir-model"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_repr = "0.1.19"
thiserror = "1"
prost = {version =  "0.13", optional = true }
nada-type = { path = "../nada-type", features = ["serde"] }
mir-proto = { path = "../mir-proto", optional = true }

[features]
default = ["proto"]
builder = []
proto = ["mir-proto", "prost"]